# 1brc

./: .gitignore  Cargo.toml  Readme.md  rust-toolchain.toml  shell.nix
src/: main.rs
