[package]
name = "data_processing_challenge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memmap = "0.7.0"
fast-float = "0.2.0"
halfbrown = "0.2.5"
tokio = { version = "1.37.0", features = ["rt-multi-thread", "macros"] }

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
debug = "full"
#strip = "symbols"

[profile.release.package."*"]
codegen-units = 1
opt-level = 3
